@@ -272,7 +272,8 @@ dnl AC_FUNC_REALLOC()	dnl triggers error in automake 1.10.1
 
 #AC_CHECK_HEADERS([stddef.h])
 #AC_CHECK_HEADERS([stdlib.h])
-AC_CHECK_HEADERS([string.h strings.h])
+AC_CHECK_HEADERS([string.h strings.h], [AC_CHECK_FUNCS(strerror)])
+
 
 AC_CHECK_HEADERS([wchar.h])
 AC_CHECK_HEADERS([fontconfig/fontconfig.h])
